src/shell/snapshots/rtx__shell__fish__tests__deactivate.snap
---
source: src/shell/fish.rs
expression: replace_path(&deactivate)
---
set -gx PATH "/some/path";
functions --erase __rtx_env_eval;
functions --erase __rtx_env_eval_2;
functions --erase __rtx_cd_hook;

