src/shell/snapshots/rtx__shell__fish__tests__set_env.snap
---
source: src/shell/fish.rs
expression: "Fish::default().set_env(\"FOO\", \"1\")"
---
set -gx FOO 1

